--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t udagram-api-user .
-  - docker tag udagram-api-user gepl/udagram-api-user:latest
+  - docker tag udagram-api-user javaire/udagram-api-user:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push gepl/udagram-api-user
+  - docker push javaire/udagram-api-user
